--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "729d9a90-ae9d-4582-bcc4-56d14f2fa0d9"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
